--- a/src/main/resources/templates/profile.html
+++ b/src/main/resources/templates/profile.html
@@ -1,10 +1,16 @@
 <!DOCTYPE html>
-<html lang="en">
+<html xmlns:th="http://www.thymeleaf.org">
 <head>
   <meta charset="UTF-8">
-  <title>Title</title>
+  <title>Profile Page</title>
 </head>
 <body>
-
+<h1>Welcome to your Profile Page</h1>
+<h2 th:text="'Hello, ' + ${username}">Hello, Username</h2>
+<p>First Name: <span th:text="${firstName}">First Name</span></p>
+<p>Last Name: <span th:text="${lastName}">Last Name</span></p>
+<p>Email: <span th:text="${email}">Email</span></p>
+<p>Phone: <span th:text="${phone}">Phone</span></p>
+<a href="/logout">Logout</a>
 </body>
 </html>
